# UtilsCXX

./: CMakeLists.txt  LICENSE
resources/: test_fasta.txt
src/: main.cc  utils.cc  utils.h
tests/: test_utils.cc
